--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.1",
+    "@types/react-modal": "^3.16.3",
     "chart.js": "^4.4.1",
     "clsx": "^2.1.0",
     "next": "14.1.0",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-modal": "^3.16.1"
   },
   "devDependencies": {
     "@types/node": "^20",
