--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
-    "react-modal": "^3.16.1"
+    "react-modal": "^3.16.1",
+    "react-responsive": "^9.0.2"
   },
   "devDependencies": {
     "@types/node": "^20",
