--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "chart.js": "^4.4.2",
     "clsx": "^2.1.0",
     "next": "14.1.0",
+    "next-auth": "^5.0.0-beta.13",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
