--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.1",
+    "@prisma/client": "^5.10.2",
     "@types/react-modal": "^3.16.3",
     "chart.js": "^4.4.2",
     "clsx": "^2.1.0",
