--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.1",
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^5.10.2",
     "@types/react-modal": "^3.16.3",
     "chart.js": "^4.4.2",
     "clsx": "^2.1.0",
     "next": "14.1.0",
+    "next-auth": "^4.24.6",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
     "react-modal": "^3.16.1",
     "react-responsive": "^9.0.2"
   },
