--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "dependencies": {
     "@auth/prisma-adapter": "^1.5.0",
     "@heroicons/react": "^2.1.1",
+    "@pinecone-database/pinecone": "^2.1.0",
     "@prisma/client": "^5.10.2",
     "@types/react-modal": "^3.16.3",
+    "ai": "^3.0.7",
     "chart.js": "^4.4.2",
     "clsx": "^2.1.0",
     "next": "14.1.0",
     "next-auth": "^4.24.6",
+    "openai": "^4.28.4",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
