--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.0.1",
     "react-modal": "^3.16.1",
     "react-responsive": "^9.0.2",
     "zod": "^3.22.4"
