--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "clsx": "^2.1.0",
     "next": "14.1.0",
     "next-auth": "^4.24.6",
+    "node-cron": "^3.0.3",
     "openai": "^4.28.4",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
@@ -32,6 +33,7 @@
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/node-cron": "^3.0.11",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
